--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -73,20 +73,20 @@ services:
         ports:
           - 8091:8000
 
-    jenkins:
-        image: jenkins/jenkins:lts
-        privileged: true
-        user: root 
-        container_name: brt_dev_jenkins
-        volumes:
-          - ./jenkins/jenkins_configuration:/var/jenkins_home
-          - ./jenkins/apt_config:/var/apt_config
-          - /var/run/docker.sock:/var/run/docker.sock
-          - ./vue:/var/simulados
-          - ./php:/var/simulados-api
+#    jenkins:
+#        image: jenkins/jenkins:lts
+#        privileged: true
+#        user: root 
+#        container_name: brt_dev_jenkins
+#        volumes:
+#          - ./jenkins/jenkins_configuration:/var/jenkins_home
+#          - ./jenkins/apt_config:/var/apt_config
+#          - /var/run/docker.sock:/var/run/docker.sock
+#          - ./vue:/var/simulados
+#          - ./php:/var/simulados-api
 
-        ports:
-          - 8085:8080
+#        ports:
+#          - 8085:8080
 
     mysql:
         image: mysql
