--- a/dockerfile/portal/Dockerfile
+++ b/dockerfile/portal/Dockerfile
@@ -1,7 +1,7 @@
 FROM php
 USER root
 RUN apt update 
-RUN apt install -y lsb-release ca-certificates apt-transport-https software-properties-common gnupg2 wget
+RUN apt install -y lsb-release ca-certificates apt-transport-https software-properties-common gnupg2 wget nodejs npm vim
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN apt install -y unzip git libsodium-dev mariadb-client
 EXPOSE 8000
